# robomongo

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  COPYRIGHT  DESCRIPTION  Dockerfile  README.md  SConstruct  build-requirements.txt  docker-compose.yml  notes.txt  shortcuts.txt  whats-new.txt
backup/: CMakeLists.txt
backup/cmake/: projecthelper.cmake  utils.cmake
backup/src/: CMakeLists.txt
cmake/: FindMongoDB.cmake  (+33 more)
src/: CMakeLists.txt  common.pri  robomongo.pro
src/app/: app.pro  main.cpp
src/core/: AppRegistry.cpp  AppRegistry.h  Core.h  Dispatcher.cpp  Dispatcher.h  Event.cpp  Event.h  EventBus.cpp  EventBus.h  EventBusDispatcher.cpp  EventBusSubscriber.h  EventError.cpp  EventError.h  EventWrapper.h  Events.cpp  Events.h  Hello.cpp  Hello.h  KeyboardManager.h  Wrapper.h  core.pro
src/core/domain/: App.cpp  App.h  MongoCollection.cpp  MongoCollection.h  MongoDatabase.cpp  MongoDatabase.h  MongoDocument.cpp  MongoDocument.h  MongoDocumentIterator.cpp  MongoDocumentIterator.h  MongoElement.cpp  MongoElement.h  MongoManager.cpp  MongoManager.h  MongoServer.cpp  MongoServer.h  MongoShell.cpp  MongoShell.h  MongoShellResult.cpp  MongoShellResult.h
src/core/engine/: Result.cpp  Result.h  ScriptEngine.cpp  ScriptEngine.h
src/core/events/: MongoEvents.cpp  MongoEvents.h
src/core/examples/: ImplicitlyShared.cpp  ImplicitlyShared.h
src/core/mongodb/: MongoClient.cpp  MongoClient.h  MongoClientThread.h  MongoDatabase.cpp  MongoDatabase.h  MongoException.h  MongoManager.cpp  MongoManager.h  MongoServer.cpp  MongoServer.h  MongoService.h
src/core/scripting/: Functions.cpp  Functions.h
src/core/settings/: ConnectionRecord.cpp  ConnectionRecord.h  ConnectionSettings.cpp  ConnectionSettings.h  CredentialSettings.cpp  CredentialSettings.h  SettingsManager.cpp  SettingsManager.h
src/gui/: ExampleWindow.cpp  GuiRegistry.cpp  GuiRegistry.h  MainWindow.cpp  MainWindow.h  gui.pro  mainwindow.cpp  mainwindow.h
src/gui/Dialogs/: ConnectionsDialog.cpp  ConnectionsDialog.h  EditConnectionDialog.cpp  EditConnectionDialog.h
src/gui/dialogs/: ConnectionAdvancedTab.cpp  ConnectionAdvancedTab.h  ConnectionAuthTab.cpp  ConnectionAuthTab.h  ConnectionBasicTab.cpp  ConnectionBasicTab.h  ConnectionDiagnosticDialog.cpp  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionsDialog.cpp  ConnectionsDialog.h  EditConnectionDialog.cpp  EditConnectionDialog.h
src/gui/editors/: JSLexer.cpp  JSLexer.h  PlainJavaScriptEditor.cpp  PlainJavaScriptEditor.h  jsedit.h
src/gui/examples/: CredentialModel.cpp  CredentialModel.h
src/gui/resources/: gui.qrc
src/gui/resources/scripts/: db.js  esprima.js
src/gui/widgets/: LogWidget.cpp  LogWidget.h  TestStackPanel.cpp  TestStackPanel.h
src/gui/widgets/explorer/: DatabaseCategoryWidgetItem.cpp  ExplorerCollectionTreeItem.cpp  ExplorerCollectionTreeItem.h  ExplorerDatabaseCategoryTreeItem.cpp  ExplorerDatabaseCategoryTreeItem.h  ExplorerDatabaseTreeItem.cpp  ExplorerDatabaseTreeItem.h  ExplorerServerTreeItem.cpp  ExplorerServerTreeItem.h  ExplorerTreeWidget.cpp  ExplorerTreeWidget.h  ExplorerWidget.cpp  ExplorerWidget.h  ServerTreeWidgetItem.cpp
src/gui/widgets/workarea/: BsonTreeItem.cpp  BsonTreeItem.h  BsonTreeWidget.cpp  BsonTreeWidget.h  BsonWidget.cpp  BsonWidget.h  CollectionViewWidget.cpp  JsonListWidget.cpp  JsonTreeWidget.cpp  OutputItemHeaderWidget.cpp  OutputItemWidget.cpp  OutputViewer.cpp  OutputViewer.h  OutputWidget.cpp  OutputWidget.h  Outputable.cpp  Outputable.h  PagingWidget.cpp  PagingWidget.h  QueryWidget.cpp  QueryWidget.h  ScriptWidget.cpp  ScriptWidget.h  WorkAreaTabBar.cpp  WorkAreaTabBar.h  WorkAreaTabWidget.cpp  WorkAreaTabWidget.h  WorkAreaWidget.cpp  WorkAreaWidget.h
src/robomongo/: CMakeLists.txt  common.pri  entry.cpp  robomongo.pro
src/robomongo-unit-tests/: CMakeLists.txt  README.md
src/robomongo/app/: app.pro  main.cpp  main_json.cpp  main_mongo.cpp  main_test.cpp
src/robomongo/core/: AppRegistry.cpp  AppRegistry.h  Core.h  EnsureIndex.cpp  EnsureIndex.h  Enums.cpp  Enums.h  Event.cpp  Event.h  EventBus.cpp  EventBus.h  EventBusDispatcher.cpp  EventBusDispatcher.h  EventBusSubscriber.cpp  EventBusSubscriber.h  EventError.cpp  EventError.h  EventWrapper.cpp  EventWrapper.h  HexUtils.cpp  HexUtils.h  HexUtils_test.cpp  KeyboardManager.cpp  KeyboardManager.h  Wrapper.cpp  Wrapper.h  core.pro
src/robomongo/gui/: AppStyle.cpp  AppStyle.h  ExampleWindow.cpp  ExampleWindow.h  GuiRegistry.cpp  GuiRegistry.h  MainWindow.cpp  MainWindow.h  ViewMode.h  gui.pro
src/robomongo/lang/: .gitignore  CMakeLists.txt  README.txt  qt_ru.qm  robomongo_de.ts  robomongo_dummy.raw.ts  robomongo_dummy.ts  robomongo_en.raw.ts  robomongo_en.ts  robomongo_pt.ts  robomongo_ru.raw.ts  robomongo_ru.ts  ru.ts  ts_compile.sh  ts_update.sh
src/robomongo/resources/: eula.html  gnu_gpl3_license.html  robo.qrc
src/robomongo/shell/: mongo-server.cpp  mongo.cpp  shell.pro
src/robomongo/ssh/: CMakeLists.txt  README.md  array.c  log.c  log.h  private.h  server.c  ssh.c  ssh.h  test.c  unix.h  win.c  win.h
src/robomongo/utils/: RoboCrypt.cpp  RoboCrypt.h  RoboCrypt_test.cpp  SimpleCrypt.cpp  SimpleCrypt.h  StringOperations.cpp  StringOperations_test.cpp  common.cpp  common.h  string_operations.cpp  string_operations.h  string_operations_test.cpp
src/shell/: mongo.cpp  shell.pro
src/shell/scripting/: engine_spidermonkey.cpp  utils.cpp
src/shell/shell/: shell_utils.cpp
src/shell/util/: processinfo.cpp  processinfo_linux2.cpp  processinfo_win32.cpp  ramlog.cpp  text.cpp
trash/: CMakeLists.txt  notes.txt
trash/cmake/: FindOpenSSL.cmake  config.cmake  integrate-qt.cmake  projecthelper.cmake
trash/docs/: dumb.txt  engine-h.diff  engine_spidermonkey-h.diff  notes.txt
trash/docs/diff-r2.4.0-rc0/: mongo_db_json_h.diff  mongo_scripting_engine_cpp.diff
trash/install/linux/: fixup_deb.sh.in  postinst.in  prerm.in  robomongo.sh
trash/install/osx/: Robomongo.icns
trash/install/windows/: win7.manifest  winres.rc.in
trash/src/: CMakeLists.txt
trash/tests/: test_connection_string.cpp  test_parser.cpp
(+451 files in other folders)
